--- a/MusicPlayerApp.Infrastructure/MusicPlayerApp.Infrastructure.csproj
+++ b/MusicPlayerApp.Infrastructure/MusicPlayerApp.Infrastructure.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+	<ItemGroup>
+		<ProjectReference Include="..\MusicPlayerApp.Application\MusicPlayerApp.Application.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<PackageReference Include="TagLibSharp" Version="2.3.0" />
+	</ItemGroup>
+
 </Project>
