--- a/MusicPlayerApp.Infrastructure/MusicPlayerApp.Infrastructure.csproj
+++ b/MusicPlayerApp.Infrastructure/MusicPlayerApp.Infrastructure.csproj
@@ -14,4 +14,14 @@
 		<PackageReference Include="TagLibSharp" Version="2.3.0" />
 	</ItemGroup>
 
+	<ItemGroup>
+		<PackageReference Include="LibVLCSharp" Version="3.9.4" />
+		<PackageReference Include="LibVLCSharp.Avalonia" Version="3.9.4" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<PackageReference Condition="$([MSBuild]::IsOsPlatform('Windows'))" Include="VideoLAN.LibVLC.Windows" Version="3.0.21" />
+		<PackageReference Condition="$([MSBuild]::IsOsPlatform('OSX'))" Include="VideoLAN.LibVLC.Mac" Version="3.1.3.1" />
+	</ItemGroup>
+
 </Project>
