Объеденены слои Application и Domain в Core

--- a/MusicPlayerApp.Infrastructure/MusicPlayerApp.Infrastructure.csproj
+++ b/MusicPlayerApp.Infrastructure/MusicPlayerApp.Infrastructure.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\MusicPlayerApp.Application\MusicPlayerApp.Application.csproj" />
+		<ProjectReference Include="..\MusicPlayerApp.Core\MusicPlayerApp.Core.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
